Part_1/exercise 1.07/manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-dep
  labels:
    app: log-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-dep
  template:
    metadata:
      name: log-dep
      labels:
        app: log-dep
    spec:
      containers:
        - name: log-app
          image: mo3mo3/log-app:v2
          imagePullPolicy: IfNotPresent

      restartPolicy: Always
